[package]
name = "fuber"
version = "0.1.0"
edition = "2021"

[lib]
name = "fuber"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
serde_json = "1.0.85"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 

[[bin]]
name = "fuber"
path = "src/main.rs"
